# FASTAPI-MARKET-MVP

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: auth.py  database.py  db_depends.py  main.py  pagination.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 036b8fc7d73d_add_unique_constraint_to_category_name.py  87f1851f2b2d_create_search_vector.py  d9d36729c0ad_initial_migration_for_postgresql.py  daaa06c5e39f_check_schema.py  e7f73964884e_create_cart.py  f54668184006_add_user_model.py
app/models/: __init__.py  base.py  cart_items.py  categories.py  products.py  users.py
app/routers/: categories.py  products.py  users.py
